Gray background for slides when Effect is set to Fade. This prevents visibility of other slides when current slide doesn't occupy the full area of the block.

--- a/client/gutenberg/extensions/slideshow/style.scss
+++ b/client/gutenberg/extensions/slideshow/style.scss
@@ -25,6 +25,10 @@
 		width: 100%;
 	}
 
+	.swiper-container-fade .wp-block-jetpack-slideshow_slide {
+		background: $muriel-gray-0;
+	}
+
 	.wp-block-jetpack-slideshow_image {
 		display: block;
 		height: auto;
